css/form.css
/* ... */
.file-holder .file-icon {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  position: absolute;
  right: 0;
  top: 50%;
  transform: translate(0, -50%);
  font-size: 34px;
  min-width: 30px;
  color: #666;
}

.file-holder.editable {
  padding: 0;
  list-style-type: none;
  width: 100%;
  padding-right: 10px;
}

.file-holder.editable .file-title {
  word-break: break-all;
}

.file-holder.editable .file-content {
  max-width: calc(100% - 30px);
}

.file-holder.editable .file-icon {
  width: 30px;
  height: 30px;
}

.file-holder.editable .file-icon .fa {
  color: #e03629;
  opacity: 0.3;
  font-size: 34px;
  right: 0;
}

.file-holder.editable .no-pointer-events {
  pointer-events: none;
}

.image-gallery {
  cursor: pointer;
}

@media screen and (min-width: 640px) {
  .file-name-helper {
    margin-top: 0;
    display: inline-block;
  }

  .fileUpload .canvas-holder {
    min-height: 130px;
  }

  .fileUpload .row > div {
    width: 25%;
  }
}

/* STAR RATING */
[_type="flStarRating"] .inverse-direction {
  overflow: hidden;
  display: block;
  text-align: left;
  direction: rtl;
}

[_type="flStarRating"] .rating-input {
  display: inline-block;
  width: 30px;
  height: 30px;
  padding: 0;
  margin: 0 0 0 -30px;
  opacity: 0;
}

[_type="flStarRating"] .rating-input.readonly,
[_type="flStarRating"] .rating-star.readonly,
[_type="flStarRating"] .rating-star.readonly .fa {
  pointer-events: none;
}

[_type="flStarRating"] .rating-star.readonly .fa,
[data-field="flStarRating"] .rating-star.readonly {
  color: #e5e5e5;
}

[_type="flStarRating"] .rating-star {
  position: relative;
  display: inline-block;
  width: 30px;
  height: 30px;
  padding: 0;
  cursor: pointer;
  margin-bottom: 0;
}

[_type="flStarRating"] .rating-star .fa {
  font-size: 30px;
  color: #337ab7;
}

[_type="flStarRating"] .rating-star .fa.fa-star-o {
  display: block;
}

[_type="flStarRating"] .rating-star .fa.fa-star {
  display: none;
}

[_type="flStarRating"] .rating-input:checked ~ .rating-star .fa.fa-star-o {
  display: none;
}

[_type="flStarRating"] .rating-input:checked ~ .rating-star .fa.fa-star {
  display: block;
}

[_type="flStarRating"] .rating-input ~ .readonly.rating-star .fa::before {
  content: "\f005";
  -webkit-text-stroke: 1px #e1e1e1;
}

[_type="flStarRating"] .rating-input ~ .readonly.rating-star .fa {
  color: #f8f8f8;
}

[_type="flStarRating"] .rating-input:checked ~ .readonly.rating-star .fa {
  color: #e1e1e1;
}

/* SIGNATURE FIELD */

.field-signature {
  position: relative;
}

.field-signature .btn-clear {
  position: absolute;
  top: 0;
  right: 10px;
  text-decoration: none;
  color: #aaa;
}

.field-signature canvas {
  border: 1px solid #ccc !important;
  border-top-width: 0 !important;
  border-left-width: 0 !important;
  border-right-width: 0 !important;
}

.has-success .field-signature canvas {
  border-color: #3c763d !important;
}

.has-warning .field-signature canvas {
  border-color: #8a6d3b !important;
}

.has-error .field-signature canvas {
  border-color: #a94442 !important;
}

.signature-preview {
  display: flex;
  flex-direction: column;
}

[data-widget-package="com.fliplet.form-builder"]
  [_type="flSignature"]
  .signature-editor.readonly
  .field-signature
  canvas {
  background-color: transparent;
  border-radius: 0%;
  border: none !important;
}

.signature-editor.readonly .field-signature {
  border-bottom: 1px solid #e5e5e5;
}

/* WYSIWYG FIELD */

.form-group .mce-tinymce {
  border: none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  border-width: 1px !important;
}

.form-group .mce-tinymce > .mce-container-body.mce-stack-layout {
  border: 1px solid #ccc;
  border-radius: 4px;
  overflow: hidden;
  -webkit-box-shadow: none;
  box-shadow: none;
}

.form-group .mce-top-part::before {
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  border-bottom: 1px solid #ccc;
}

.form-group .mce-ico {
  color: #666;
}

.form-group.has-success .mce-tinymce {
  border-color: #3c763d;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.form-group.has-success .mce-top-part::before {
  border-color: #3c763d;
}

.form-group.has-success
  .tinymce-mobile-outer-container:not(.tinymce-mobile-fullscreen-maximized)
  .tinymce-mobile-editor-socket {
  border-color: #3c763d;
}

.form-group.has-warning .mce-tinymce {
  border-color: #8a6d3b;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.form-group.has-warning .mce-top-part::before {
  border-color: #8a6d3b;
}

.form-group.has-warning
  .tinymce-mobile-outer-container:not(.tinymce-mobile-fullscreen-maximized)
  .tinymce-mobile-editor-socket {
  border-color: #8a6d3b;
}

.form-group.has-error .mce-tinymce {
  border-color: #a94442;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.form-group.has-error
  .tinymce-mobile-outer-container:not(.tinymce-mobile-fullscreen-maximized)
  .tinymce-mobile-editor-socket {
  border-color: #a94442;
}

.form-group.has-error .mce-top-part::before {
  border-color: #a94442;
}

.form-group div.mce-edit-area {
  background: #f8f8f8;
  border: 1px solid #e5e5e5;
  border-radius: 5px;
}

.tinymce-mobile-outer-container .tinymce-mobile-disabled-mask {
  opacity: 0;
}

.tinymce-mobile-outer-container .tinymce-mobile-disabled-mask .tinymce-mobile-content-container,
.tinymce-mobile-outer-container
  .tinymce-mobile-disabled-mask
  .tinymce-mobile-content-container
  .tinymce-mobile-content-tap-section {
  width: 100%;
  height: 100%;
}

.tinymce-mobile-outer-container:not(.tinymce-mobile-fullscreen-maximized)
  .tinymce-mobile-editor-socket {
  border: 1px solid #ccc;
  border-radius: 4px;
}

@media screen and (max-width: 1280px) {
  .tox-toolbar__primary {
    justify-content: space-between;
  }
}
/* ... */

